--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services-maps:9.2.0'
 }
