--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.google.android.gms:play-services-maps:9.2.0'
     compile 'com.google.android.gms:play-services-places:9.2.0'
+    compile 'com.google.code.gson:gson:2.7'
 }
